--- a/listing-page.html
+++ b/listing-page.html
@@ -118,7 +118,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -155,7 +155,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -192,7 +192,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -229,7 +229,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -268,7 +268,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -306,7 +306,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -344,7 +344,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -382,7 +382,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -420,7 +420,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -457,7 +457,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -494,7 +494,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -531,7 +531,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-share share"></i> <!-- Added 'share' class -->
+                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
