--- a/index.html
+++ b/index.html
@@ -286,40 +286,168 @@
 			</div>
 			<div class="bestseller_main owl-carousel owl-theme">
 				<!--  -->
-				<div class="item">
-					<a href="">
-						<div class="inner_seller">
-							<img src="./image/bestseller-1.png" alt="">
-							<p>FL-57 Set Ebony Grace Jar Set</p>
+				<div class="item collection_main">
+					<div class="collect_item">
+						<a href="/BMI/detail-page.html">
+							<div class="collect_imag">
+								<img src="./image/bestseller-4.png" alt="">
+								<div class="product_detai">
+									<div class="prod_infoview">
+										<p>Length : 20m</p>
+										<p>Breadth : 21m</p>
+										<p>Height : 21m</p>
+										<p>Weight : 2.5kg</p>
+										<p>Mininum Order Quantity : 10</p>
+										<p class="request_quote">Request Quotation</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<div class="listing_detail">
+							<h3>FL-55 Set Frosty Delight Jar Set</h3>
+							<div class="listing_quality">
+								<a href=""> <i class="fa-solid fa-heart"></i></a>
+
+								<div class="product_listshare">
+									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<ul class="social">
+										<li><a href="#" target="_blank" title="facebook"><i
+													class="fa-brands fa-square-facebook"></i></a></li>
+										<li><a href="#" target="_blank" title="twitter"><i
+													class="fa-brands fa-x-twitter"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-linkedin-in"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-whatsapp"></i></a></li>
+									</ul>
+								</div>
+								<!--  -->
+							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!--  -->
-				<div class="item">
-					<a href="">
-						<div class="inner_seller">
-							<img src="./image/bestseller-2.png" alt="">
-							<p>FL-58 Timber-Edged</p>
+				<div class="item collection_main">
+					<div class="collect_item">
+						<a href="/BMI/detail-page.html">
+							<div class="collect_imag">
+								<img src="./image/bestseller-4.png" alt="">
+								<div class="product_detai">
+									<div class="prod_infoview">
+										<p>Length : 20m</p>
+										<p>Breadth : 21m</p>
+										<p>Height : 21m</p>
+										<p>Weight : 2.5kg</p>
+										<p>Mininum Order Quantity : 10</p>
+										<p class="request_quote">Request Quotation</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<div class="listing_detail">
+							<h3>FL-55 Set Frosty Delight Jar Set</h3>
+							<div class="listing_quality">
+								<a href=""> <i class="fa-solid fa-heart"></i></a>
+
+								<div class="product_listshare">
+									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<ul class="social">
+										<li><a href="#" target="_blank" title="facebook"><i
+													class="fa-brands fa-square-facebook"></i></a></li>
+										<li><a href="#" target="_blank" title="twitter"><i
+													class="fa-brands fa-x-twitter"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-linkedin-in"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-whatsapp"></i></a></li>
+									</ul>
+								</div>
+								<!--  -->
+							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!--  -->
-				<div class="item">
-					<a href="">
-						<div class="inner_seller">
-							<img src="./image/bestseller-3.png" alt="">
-							<p>FL-55 Set Frosty Delight Jar Set</p>
+				<div class="item collection_main">
+					<div class="collect_item">
+						<a href="/BMI/detail-page.html">
+							<div class="collect_imag">
+								<img src="./image/bestseller-4.png" alt="">
+								<div class="product_detai">
+									<div class="prod_infoview">
+										<p>Length : 20m</p>
+										<p>Breadth : 21m</p>
+										<p>Height : 21m</p>
+										<p>Weight : 2.5kg</p>
+										<p>Mininum Order Quantity : 10</p>
+										<p class="request_quote">Request Quotation</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<div class="listing_detail">
+							<h3>FL-55 Set Frosty Delight Jar Set</h3>
+							<div class="listing_quality">
+								<a href=""> <i class="fa-solid fa-heart"></i></a>
+
+								<div class="product_listshare">
+									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<ul class="social">
+										<li><a href="#" target="_blank" title="facebook"><i
+													class="fa-brands fa-square-facebook"></i></a></li>
+										<li><a href="#" target="_blank" title="twitter"><i
+													class="fa-brands fa-x-twitter"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-linkedin-in"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-whatsapp"></i></a></li>
+									</ul>
+								</div>
+								<!--  -->
+							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!--  -->
-				<div class="item">
-					<a href="">
-						<div class="inner_seller">
-							<img src="./image/bestseller-4.png" alt="">
-							<p>FL-54 Midnight Reverie Jar</p>
+				<div class="item collection_main">
+					<div class="collect_item">
+						<a href="/BMI/detail-page.html">
+							<div class="collect_imag">
+								<img src="./image/bestseller-4.png" alt="">
+								<div class="product_detai">
+									<div class="prod_infoview">
+										<p>Length : 20m</p>
+										<p>Breadth : 21m</p>
+										<p>Height : 21m</p>
+										<p>Weight : 2.5kg</p>
+										<p>Mininum Order Quantity : 10</p>
+										<p class="request_quote">Request Quotation</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<div class="listing_detail">
+							<h3>FL-55 Set Frosty Delight Jar Set</h3>
+							<div class="listing_quality">
+								<a href=""> <i class="fa-solid fa-heart"></i></a>
+
+								<div class="product_listshare">
+									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<ul class="social">
+										<li><a href="#" target="_blank" title="facebook"><i
+													class="fa-brands fa-square-facebook"></i></a></li>
+										<li><a href="#" target="_blank" title="twitter"><i
+													class="fa-brands fa-x-twitter"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-linkedin-in"></i></a></li>
+										<li><a href="#" target="_blank" title="linkedin"><i
+													class="fa-brands fa-whatsapp"></i></a></li>
+									</ul>
+								</div>
+								<!--  -->
+							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!--  -->
 			</div>
@@ -347,57 +475,71 @@
 	<!-- six things -->
 	<section class="sixmain_thing" style="background: #FFF9EB;">
 		<h2 class="subheading">6 things that define us</h2>
-		<div class="container">
-			<div class="define_thing">
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-1.png" alt="">
+		<div class="about_servithig">
+			<div class="container">
+				<div class="define_thing">
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-1.png" alt="">
+					</div>
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-2.png" alt="">
+					</div>
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-3.png" alt="">
+					</div>
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-4.png" alt="">
+					</div>
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-5.png" alt="">
+					</div>
+					<!--  -->
+					<div class="trend_item">
+						<h3>Trend-Driven Collections</h3>
+						<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned
+							with
+							current and emerging trends, and can even forecast trends specific to a client's local
+							market.
+						</p>
+						<img src="./image/things-6.png" alt="">
+					</div>
+					<!--  -->
 				</div>
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-2.png" alt="">
-				</div>
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-3.png" alt="">
-				</div>
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-4.png" alt="">
-				</div>
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-5.png" alt="">
-				</div>
-				<!--  -->
-				<div class="trend_item">
-					<h3>Trend-Driven Collections</h3>
-					<p>By working with global homeware trend forecasters, BMI ensures its collections are aligned with
-						current and emerging trends, and can even forecast trends specific to a client's local market.
-					</p>
-					<img src="./image/things-6.png" alt="">
-				</div>
-				<!--  -->
 			</div>
 		</div>
 	</section>
@@ -718,6 +860,13 @@
 	<script type="text/javascript" src="./js/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="./js/myscript.js"></script>
 
+
+
+	<style>
+		.item.collection_main .collect_item {
+			width: 100%;
+		}
+	</style>
 </body>
 
 </html>
