--- a/listing-page.html
+++ b/listing-page.html
@@ -118,7 +118,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -126,6 +126,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -155,7 +157,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -163,6 +165,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -192,7 +196,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -200,6 +204,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -229,7 +235,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -237,6 +243,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -268,7 +276,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -276,6 +284,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -306,7 +316,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -314,6 +324,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -344,7 +356,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -352,6 +364,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -382,7 +396,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -390,6 +404,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -420,7 +436,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -428,6 +444,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -457,7 +475,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -465,6 +483,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -494,7 +514,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -502,6 +522,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -531,7 +553,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                               <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -539,6 +561,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
