--- a/detail-page.html
+++ b/detail-page.html
@@ -197,6 +197,8 @@
                                                     class="fa-brands fa-x-twitter"></i></a></li>
                                         <li><a href="#" target="_blank" title="linkedin"><i
                                                     class="fa-brands fa-linkedin-in"></i></a></li>
+                                        <li><a href="#" target="_blank" title="linkedin"><i
+                                                    class="fa-brands fa-whatsapp"></i></a></li>
                                     </ul>
                                 </div>
                                 <!--  -->
@@ -417,6 +419,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -719,7 +723,7 @@
         margin-left: 10px;
     }
 
-    .share_btn  {
+    .share_btn {
         top: 60px;
     }
 
