--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 								<a href=""> <i class="fa-solid fa-heart"></i></a>
 
 								<div class="product_listshare">
-									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
 									<ul class="social">
 										<li><a href="#" target="_blank" title="facebook"><i
 													class="fa-brands fa-square-facebook"></i></a></li>
@@ -350,7 +350,7 @@
 								<a href=""> <i class="fa-solid fa-heart"></i></a>
 
 								<div class="product_listshare">
-									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
 									<ul class="social">
 										<li><a href="#" target="_blank" title="facebook"><i
 													class="fa-brands fa-square-facebook"></i></a></li>
@@ -391,7 +391,7 @@
 								<a href=""> <i class="fa-solid fa-heart"></i></a>
 
 								<div class="product_listshare">
-									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
 									<ul class="social">
 										<li><a href="#" target="_blank" title="facebook"><i
 													class="fa-brands fa-square-facebook"></i></a></li>
@@ -432,7 +432,7 @@
 								<a href=""> <i class="fa-solid fa-heart"></i></a>
 
 								<div class="product_listshare">
-									<i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+									<i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
 									<ul class="social">
 										<li><a href="#" target="_blank" title="facebook"><i
 													class="fa-brands fa-square-facebook"></i></a></li>
