--- a/detail-page.html
+++ b/detail-page.html
@@ -300,7 +300,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-share-nodes share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -337,7 +337,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-share-nodes share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -374,7 +374,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-share-nodes share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -411,7 +411,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-share-nodes share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
