--- a/listing-page.html
+++ b/listing-page.html
@@ -118,7 +118,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -157,7 +157,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -196,7 +196,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -235,7 +235,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -276,7 +276,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -316,7 +316,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -356,7 +356,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -396,7 +396,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -436,7 +436,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -475,7 +475,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -514,7 +514,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
@@ -553,7 +553,7 @@
                             <a href=""> <i class="fa-solid fa-heart"></i></a>
 
                             <div class="product_listshare">
-                                <i class="fa-solid fa-arrow-up-from-bracket share"></i> <!-- Added 'share' class -->
+                                <i class="fa-solid fa-share-from-square share"></i> <!-- Added 'share' class -->
                                 <ul class="social">
                                     <li><a href="#" target="_blank" title="facebook"><i
                                                 class="fa-brands fa-square-facebook"></i></a></li>
