--- a/detail-page.html
+++ b/detail-page.html
@@ -308,6 +308,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -345,6 +347,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
@@ -382,6 +386,8 @@
                                                 class="fa-brands fa-x-twitter"></i></a></li>
                                     <li><a href="#" target="_blank" title="linkedin"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#" target="_blank" title="linkedin"><i
+                                                class="fa-brands fa-whatsapp"></i></a></li>
                                 </ul>
                             </div>
                             <!--  -->
